Added weather tool

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,7 +17,7 @@
     // Type Checking
     "strict": true,
     "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
+    // "exactOptionalPropertyTypes": true,
     "skipLibCheck": true,
     
     // Other Outputs
