Nvidia suport for ollama container and better formating of tool response

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,24 @@
+FROM node:20-alpine AS builder
+
+WORKDIR /app
+
+COPY package*.json ./
+
+RUN npm ci  # Install ALL dependencies (including devDependencies)
+
+COPY . .
+
+RUN npm run build
+
 FROM node:20-alpine
 
 WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm ci --only=production
+RUN npm ci --only=production  # Now install only production deps
 
-COPY . .
-
-RUN npm run build
+COPY --from=builder /app/dist ./dist
 
 EXPOSE 3001
 
