--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,14 @@ services:
       - ollama_data:/root/.ollama
     environment:
       - OLLAMA_HOST=0.0.0.0:11434
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+                
 
   ollama-setup:
     image: ollama/ollama:latest
@@ -58,12 +66,12 @@ services:
     command:
       - |
         echo "Checking if models are already installed..."
-        if ollama list | grep -q "qwen2.5:3b-instruct-q4_K_M"; then
+        if ollama list | grep -q "qwen2.5:1.5b-instruct-q4_K_M"; then
           echo "Models already installed, skipping..."
           exit 0
         fi
-        echo "Installing qwen2.5:3b-instruct-q4_K_M (this may take a few minutes on first run)..."
-        ollama pull qwen2.5:3b-instruct-q4_K_M
+        echo "Installing qwen2.5:1.5b-instruct-q4_K_M (this may take a few minutes on first run)..."
+        ollama pull qwen2.5:1.5b-instruct-q4_K_M
         echo "✓ Model ready!"
     restart: "no"
 
