--- a/docker-compose.nvidia.yml
+++ b/docker-compose.nvidia.yml
@@ -45,6 +45,14 @@ services:
       - ollama_data:/root/.ollama
     environment:
       - OLLAMA_HOST=0.0.0.0:11434
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+                
 
   ollama-setup:
     image: ollama/ollama:latest
